--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,89 @@
+html, body{
+    height: 100%;
+}
 body{
     font-family: 'Roboto Condensed', sans-serif;
 }
 
+h3{
+    text-transform: uppercase;
+}
+
+/* =================================
+            Parallax effect
+===================================*/
+.bg-parallax{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+/* =================================
+                HOME
+===================================*/
+#home{
+    height: 100%;
+}
+#home-cover{
+    background-image: url('../img/bg-home.jpg');
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+#home-content-box{
+    width: 100%;
+    height: 100%;
+    display: table;
+}
+#home-content-inner{
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+}
+#home-heading h3{
+    color: #fff;
+    font-size: 55px;
+    font-weight: 700;
+    margin: 20px 0 20px 0;
+}
+
+/* =================================
+            BUTTON GENERIC
+===================================*/
+.btn-general{
+    border-width: 2px;
+    border-radius: 0;
+    padding: 12px 26px 12px 26px;
+    font-size: 16px;
+    font-weight: 400px;
+    text-transform: uppercase;
+}
+
+.btn-white{
+    color: #fff;
+    border-color: #fff;
+}
+
+.btn-white:hover,
+.btn-white:focus{
+    background-color: #fff;
+    color: #41464b;
+}
+
+/* =================================
+            animate
+===================================*/
+#home-cover{
+    animation-delay: .1s;
+    animation-duration: .5s;
+}
+#home-heading{
+    animation-delay: .5s;
+    animation-duration: .5s;
+}
+#home-btn{
+    animation-delay: 1s;
+    animation-duration: .5s;
+}
