--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,12 @@ body{
 
 h3{
     text-transform: uppercase;
+    color: #41464b;
+}
+p {
+    color: #64707b;
+    font-size: 16px;
+    font-weight: 300;
 }
 
 /* =================================
@@ -86,4 +92,55 @@ h3{
 #home-btn{
     animation-delay: 1s;
     animation-duration: .5s;
+}
+
+/* =================================
+            CONTENT (GENERIC)
+===================================*/
+/* use this code for another section not just for service bcz
+there are very similar */
+.content-box{
+    padding: 60px 0px;
+}
+.content-title{
+    font-size: 30px;
+    font-weight: 700;
+    text-align: center;
+    margin:0 0 30px 0 ;
+}
+.content-title-underline{
+    width: 30px;
+    height: 3px;
+    background-color: #34c6d3;
+    margin: 0 auto 30px auto;
+}
+/* =================================
+            SERVICES
+===================================*/
+.service-item{
+    padding: 20px 0;
+    margin-bottom: 1px;
+}
+.service-item-icon i{
+    float: left;
+    padding: 15px;
+    margin-right: 15px;
+    width: 75px;
+    height: 75px;
+    text-align: center;
+    color: #34c6d3;
+}
+.service-item-title h3{
+    font-size: 20px;
+    font-weight: 400px;
+    margin: 0 0 10px 0;
+}
+/* if hover over item, applay style for service-item i */
+.service-item:hover .service-item-icon i{
+    color: #fff;
+    background-color: #34c6d3;
+}
+.service-item-desc p {
+    margin: 0;
+    padding-left: 85px;
 }
